Add Molecule tests, Travis CI build (#46)
* Add jenkins_home option to jenkins_plugin

This fixes an error with "Could not replace file" if the Jenkins user
doesn't have permission to write to /var/lib/jenkins (the default
value of this option).

* Add .yamllint configuration file

* Fix yamllint warning for spaces before comments

* Remove extra newlines

* Remove extraneous comments from meta YAML file

* Fix indentation in meta YAML file

* Use true/false for truthy values

This fixes an ansible-lint warning

* Add names to all tasks

This fixes an ansible-lint violation

* Fix indentation

* Make tasks idempotent

This fixes an ansible-lint warning as well as a test failure in
molecule. In some cases, the warning has just been suppressed with a
noqa comment -- in the future, we should fix these tasks and make them
actually idempotent (if possible).

* Break long lines

* Improve YAML readability

* Add Molecule tests to repository

This commit introduces Molecule, a framework for testing Ansible
roles, into the repository. The testing is somewhat limited at the
moment; it only tests the apt installation method with Ubuntu 16.04
Xenial, and only tests a few role features, namely:

- Whether Jenkins was successfully installed
- Whether the Jenkins service started up
- Installation of a sample job
- Installation of a plugin

It would be nice to expand test and platform coverage of this in the
future, but this commit at least gives us a base from which we can
expand.

* Add .travis.yml to repository

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,10 +1,10 @@
 ---
-jenkins_version: "2.73.1" # The exact version of jenkins to deploy
+jenkins_version: "2.73.1"  # The exact version of jenkins to deploy
 
-jenkins_url: "http://127.0.0.1" # The url that Jenkins will be accessible on
-jenkins_port: "8080" # The port that Jenkins will listen on
-jenkins_home: /data/jenkins # The directory on the server where the Jenkins configs will live
-jenkins_admin: "admin@example.com" # The admininstrator email address for the Jenkins server
+jenkins_url: "http://127.0.0.1"  # The url that Jenkins will be accessible on
+jenkins_port: "8080"  # The port that Jenkins will listen on
+jenkins_home: /data/jenkins  # The directory on the server where the Jenkins configs live
+jenkins_admin: "admin@example.com"  # The administrator email address for the server
 
 # If you need to override any java options then do that here.
 jenkins_java_opts: "-Djenkins.install.runSetupWizard=false"
@@ -26,7 +26,7 @@ jenkins_source_config_xml: "{{ jenkins_source_dir_configs }}/config.xml"
 
 # Include custom files for jenkins installation
 jenkins_include_custom_files: false
-jenkins_custom_files: {} # src and dest names
+jenkins_custom_files: {}  # src and dest names
 
 # Include secrets directory during installation
 jenkins_include_secrets: false
@@ -81,4 +81,3 @@ jenkins_apt_packages:
 # Java version to use. Note that JDK 8 is required for Jenkins
 # 2.54 or greater.
 jenkins_java_version: "java-1.8.0-openjdk-amd64"
-
