--- a/tasks/apt/install.yml
+++ b/tasks/apt/install.yml
@@ -44,8 +44,9 @@
     state: present
 
 - name: Set default Java version
-  shell: /usr/sbin/update-java-alternatives -s "{{ jenkins_java_version }}"
-  ignore_errors: yes
+  shell: /usr/sbin/update-java-alternatives -s "{{ jenkins_java_version }}"  # noqa 305
+  ignore_errors: true
+  changed_when: false
 
 - name: Add Jenkins key
   apt_key:
@@ -60,8 +61,8 @@
 - name: Install Jenkins binary package
   apt:
     name: "jenkins={{ jenkins_version }}"
-    force: yes
-    update_cache: yes
+    force: true
+    update_cache: true
 
 - name: Set JENKINS_HOME
   lineinfile:
