--- a/tasks/apt/stop.yml
+++ b/tasks/apt/stop.yml
@@ -3,6 +3,8 @@
   service:
     name: jenkins
     state: stopped
+  changed_when: false
 
-- wait_for:
+- name: Wait for Jenkins to stop
+  wait_for:
     timeout: 5
