--- a/tasks/docker/install.yml
+++ b/tasks/docker/install.yml
@@ -32,6 +32,7 @@
   register: container_result
   when: not jenkins_docker_expose_port
 
-- pause:
+- name: Pause container  # noqa 503
+  pause:
     seconds: 45
   when: container_result|changed
