--- a/tasks/get-crumb.yml
+++ b/tasks/get-crumb.yml
@@ -1,8 +1,9 @@
 ---
 - name: Get token for Jenkins API
   uri:
-    url: '{{ jenkins_url }}:{{ jenkins_port }}/crumbIssuer/api/xml?xpath=concat(//crumbRequestField,":",//crumb)'
-    return_content: yes
+    url: '{{ jenkins_url }}:{{ jenkins_port }}
+      /crumbIssuer/api/xml?xpath=concat(//crumbRequestField,":",//crumb)'
+    return_content: true
     status_code: 200,404
   register: jenkins_token_result
   until: jenkins_token_result.status == 200 or jenkins_token_result.status == 404
