--- a/tasks/configure-plugins.yml
+++ b/tasks/configure-plugins.yml
@@ -44,3 +44,8 @@
     timeout: "{{ jenkins_plugin_timeout }}"
   with_items: "{{ jenkins_plugins }}"
   when: jenkins_auth == "crumb" or jenkins_auth == "none"
+
+- name: Wait for plugins to finish installing
+  wait_for:
+    path: "{{ jenkins_home }}/plugins/{{ item }}.jpi"
+  with_items: "{{ jenkins_plugins }}"
