--- a/tasks/cancel-quiet-mode.yml
+++ b/tasks/cancel-quiet-mode.yml
@@ -32,4 +32,5 @@
     headers:
       Content-Type: "text/xml"
     status_code: 200,302
+    validate_certs: "{{ jenkins_https_validate_certs }}"
   when: jenkins_auth == "none"
