--- a/tasks/configure-plugins.yml
+++ b/tasks/configure-plugins.yml
@@ -26,6 +26,7 @@
     url_username: "{{ jenkins_api_username }}"
     url_password: "{{ jenkins_api_token }}"
     force_basic_auth: true
+    validate_certs: "{{ jenkins_https_validate_certs }}"
   with_items: "{{ jenkins_plugins }}"
   when: jenkins_auth == "api"
 
