--- a/tasks/get-crumb.yml
+++ b/tasks/get-crumb.yml
@@ -5,6 +5,7 @@
       /crumbIssuer/api/xml?xpath=concat(//crumbRequestField,":",//crumb)'
     return_content: true
     status_code: 200,404
+    validate_certs: "{{ jenkins_https_validate_certs }}"
   register: jenkins_crumb
   until: jenkins_crumb.status == 200 or jenkins_crumb.status == 404
   retries: 5
