--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,6 +11,14 @@
 - name: Set jenkins_url fact for HTTP
   set_fact:
     jenkins_url: "http://{{ jenkins_hostname }}:{{ jenkins_port }}"
+  when: jenkins_port != "-1" and jenkins_url is not defined
+
+# Note that this task will overwrite jenkins_url if both HTTP and HTTPS ports are defined.
+# This is by intention.
+- name: Set jenkins_url fact for HTTPS
+  set_fact:
+    jenkins_url: "https://{{ jenkins_hostname }}:{{ jenkins_port_https }}"
+  when: jenkins_port_https != "-1" and jenkins_url is not defined
 
 - include: "{{ jenkins_install_via }}/install.yml"
 
