Set the jenkins_url fact based on protocol
This change un-defines jenkins_url in the default's main.yml file, and
instead allows users to define jenkins_hostname instead. The rationale
for this is:

- Previously jenkins_url was not a true URL as it did not include the
  port. This was added by the role as necessary.
- It required the user to specify the protocol, which became a bit
  awkward when adding support for HTTPS.

This change includes backwards-compatibility support for playbooks
which define jenkins_url by re-defining it to the new value with a
port, and displaying a debug warning message to the user.

--- a/tasks/configure-plugins.yml
+++ b/tasks/configure-plugins.yml
@@ -21,7 +21,7 @@
     jenkins_home: "{{ jenkins_home }}"
     owner: "{{ jenkins_config_owner }}"
     group: "{{ jenkins_config_group }}"
-    url: "{{ jenkins_url }}:{{ jenkins_port }}"
+    url: "{{ jenkins_url }}"
     timeout: "{{ jenkins_plugin_timeout }}"
     url_username: "{{ jenkins_api_username }}"
     url_password: "{{ jenkins_api_token }}"
@@ -39,7 +39,7 @@
     jenkins_home: "{{ jenkins_home }}"
     owner: "{{ jenkins_config_owner }}"
     group: "{{ jenkins_config_group }}"
-    url: "{{ jenkins_url }}:{{ jenkins_port }}"
+    url: "{{ jenkins_url }}"
     timeout: "{{ jenkins_plugin_timeout }}"
   with_items: "{{ jenkins_plugins }}"
   when: jenkins_auth == "crumb" or jenkins_auth == "none"
