--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 jenkins_version: "2.73.1"  # The exact version of jenkins to deploy
 
-jenkins_url: "http://127.0.0.1"  # The url that Jenkins will be accessible on
+jenkins_hostname: "127.0.0.1"  # The hostname that Jenkins will be accessible on
 jenkins_port: "8080"  # The port that Jenkins will listen on
 jenkins_home: /data/jenkins  # The directory on the server where the Jenkins configs live
 jenkins_admin: "admin@example.com"  # The administrator email address for the server
