--- a/tasks/cancel-quiet-mode.yml
+++ b/tasks/cancel-quiet-mode.yml
@@ -1,7 +1,7 @@
 ---
 - name: Cancel quiet mode with API token
   uri:
-    url: "{{ jenkins_url }}:{{ jenkins_port }}/cancelQuietDown"
+    url: "{{ jenkins_url }}/cancelQuietDown"
     method: POST
     headers:
       Content-Type: "text/xml"
@@ -16,7 +16,7 @@
 
 - name: Cancel quiet mode with crumb
   uri:
-    url: "{{ jenkins_url }}:{{ jenkins_port }}/cancelQuietDown"
+    url: "{{ jenkins_url }}/cancelQuietDown"
     method: POST
     headers:
       Content-Type: "text/xml"
@@ -27,7 +27,7 @@
 
 - name: Cancel quiet mode with no security
   uri:
-    url: "{{ jenkins_url }}:{{ jenkins_port }}/cancelQuietDown"
+    url: "{{ jenkins_url }}/cancelQuietDown"
     method: POST
     headers:
       Content-Type: "text/xml"
