--- a/tasks/start.yml
+++ b/tasks/start.yml
@@ -3,7 +3,7 @@
 
 - name: Wait for Jenkins to start
   uri:
-    url: "{{ jenkins_url }}:{{ jenkins_port }}"
+    url: "{{ jenkins_url }}"
   become: false
   register: jenkins_home_content
   # Jenkins will return 503 (service unavailable) on the home page while
