Add jenkins_auth variable to determine auth type
This change is the first step in flexibly supporting multiple
authentication types to use when deploying Jenkins. In a future
commit, support for API tokens will be added.

This change also renames jenkins_token to jenkins_crumb_token, in
order to be more explicit about the token type.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -54,6 +54,15 @@ jenkins_plugin_timeout: 300
 # List of sources of custom jenkins plugins to install
 jenkins_custom_plugins: []
 
+#######################
+# Authentication vars #
+#######################
+
+# Mechanism to use when authenticating to Jenkins. Must be one of the following values:
+# - crumb: Use anonymous crumb-based authentication
+# - none: No security (not recommended)
+jenkins_auth: "crumb"
+
 ###################################################
 # Docker vars: apply to deploying via docker only #
 ###################################################
