Support API token authentication

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -59,9 +59,16 @@ jenkins_custom_plugins: []
 #######################
 
 # Mechanism to use when authenticating to Jenkins. Must be one of the following values:
+# - api: Use an API token which belongs to a specific user
 # - crumb: Use anonymous crumb-based authentication
 # - none: No security (not recommended)
 jenkins_auth: "crumb"
+
+# When defined, use this API token instead of getting a crumb from the system. Requires
+# jenkins_api_username.
+jenkins_api_token: ""
+# Username which owns the above API token.
+jenkins_api_username: ""
 
 ###################################################
 # Docker vars: apply to deploying via docker only #
