Test that job dirs/config.xml files were created

--- a/tasks/configure-jobs.yml
+++ b/tasks/configure-jobs.yml
@@ -8,6 +8,8 @@
     path: "{{ jenkins_home }}/jobs/{{ item }}"
     state: directory
     mode: 0777
+    owner: "{{ jenkins_config_owner }}"
+    group: "{{ jenkins_config_group }}"
   with_items: "{{ jenkins_jobs }}"
 
 - name: Jobs are present
@@ -15,4 +17,6 @@
     src: "{{ jenkins_source_dir_jobs }}/{{ item }}/config.xml"
     dest: "{{ jenkins_home }}/jobs/{{ item }}/config.xml"
     mode: 0777
+    owner: "{{ jenkins_config_owner }}"
+    group: "{{ jenkins_config_group }}"
   with_items: "{{ jenkins_jobs }}"
