--- a/tasks/set-quiet-mode.yml
+++ b/tasks/set-quiet-mode.yml
@@ -4,7 +4,7 @@
 
 - name: Set quiet mode with API token
   uri:
-    url: "{{ jenkins_url }}:{{ jenkins_port }}/quietDown"
+    url: "{{ jenkins_url }}/quietDown"
     method: POST
     headers:
       Content-Type: "text/xml"
@@ -16,18 +16,19 @@
 
 - name: Set quiet mode with crumb
   uri:
-    url: "{{ jenkins_url }}:{{ jenkins_port }}/quietDown"
+    url: "{{ jenkins_url }}/quietDown"
     method: POST
     headers:
       Content-Type: "text/xml"
       Cookie: "{{ jenkins_crumb_cookie }}"
       Jenkins-Crumb: "{{ jenkins_crumb_token }}"
     status_code: 200,302
+    validate_certs: "{{ jenkins_https_validate_certs }}"
   when: jenkins_auth == "crumb"
 
 - name: Set quiet mode with no security
   uri:
-    url: "{{ jenkins_url }}:{{ jenkins_port }}/quietDown"
+    url: "{{ jenkins_url }}/quietDown"
     method: POST
     headers:
       Content-Type: "text/xml"
