--- a/tasks/get-crumb.yml
+++ b/tasks/get-crumb.yml
@@ -1,10 +1,11 @@
 ---
 - name: Get crumb for Jenkins API
   uri:
-    url: '{{ jenkins_url }}:{{ jenkins_port }}
+    url: '{{ jenkins_url }}
       /crumbIssuer/api/xml?xpath=concat(//crumbRequestField,":",//crumb)'
     return_content: true
     status_code: 200,404
+    validate_certs: "{{ jenkins_https_validate_certs }}"
   register: jenkins_crumb
   until: jenkins_crumb.status == 200 or jenkins_crumb.status == 404
   retries: 5
