Set HTTP*_PORT variables in config file
Previous to this change, we were using lineinfile to set HTTP_PORT,
but just ignoring that value in JENKINS_ARGS. This change fixes that,
and also adds another variable for HTTPS_PORT, which is not defined by
default in some package distribution versions of this file.

--- a/tasks/configure-jenkins.yml
+++ b/tasks/configure-jenkins.yml
@@ -12,11 +12,19 @@
     state: present
   when: jenkins_install_via != "docker"
 
-- name: Set Jenkins port
+- name: Set Jenkins port for HTTP
   lineinfile:
     dest: /etc/default/jenkins
     regexp: '^HTTP_PORT='
     line: "HTTP_PORT={{ jenkins_port }}"
+  when: jenkins_install_via != "docker"
+
+- name: Set Jenkins port for HTTPS
+  lineinfile:
+    dest: /etc/default/jenkins
+    regexp: '^HTTPS_PORT='
+    insertafter: '^HTTP_PORT='
+    line: "HTTPS_PORT={{ jenkins_port_https }}"
   when: jenkins_install_via != "docker"
 
 - name: Set Jenkins Java command line options
@@ -117,5 +125,5 @@
   lineinfile:
     dest: /etc/default/jenkins
     regexp: '^JENKINS_ARGS='
-    line: "JENKINS_ARGS=\"--webroot=/var/cache/$NAME/war --httpPort={{ jenkins_port }} \
-      --httpsPort={{ jenkins_port_https }} {{ jenkins_https_creds }}\""
+    line: "JENKINS_ARGS=\"--webroot=/var/cache/$NAME/war --httpPort=$HTTP_PORT \
+      --httpsPort=$HTTPS_PORT {{ jenkins_https_creds }}\""
