--- a/tasks/configure-jenkins.yml
+++ b/tasks/configure-jenkins.yml
@@ -3,6 +3,37 @@
 # otherwise some data might be overwritten when it restarts.
 - include_tasks: "{{ jenkins_install_via }}/stop.yml"
 
+- name: Set JENKINS_HOME
+  lineinfile:
+    create: true
+    dest: "/etc/default/jenkins"
+    line: "JENKINS_HOME={{ jenkins_home }}"
+    regexp: '^JENKINS_HOME='
+    state: present
+  when: jenkins_install_via != "docker"
+
+- name: Set Jenkins port for HTTP
+  lineinfile:
+    dest: /etc/default/jenkins
+    regexp: '^HTTP_PORT='
+    line: "HTTP_PORT={{ jenkins_port }}"
+  when: jenkins_install_via != "docker"
+
+- name: Set Jenkins port for HTTPS
+  lineinfile:
+    dest: /etc/default/jenkins
+    regexp: '^HTTPS_PORT='
+    insertafter: '^HTTP_PORT='
+    line: "HTTPS_PORT={{ jenkins_port_https }}"
+  when: jenkins_install_via != "docker"
+
+- name: Set Jenkins Java command line options
+  lineinfile:
+    dest: /etc/default/jenkins
+    regexp: '^JAVA_ARGS='
+    line: "JAVA_ARGS=\"{{ jenkins_java_opts }}\""
+  when: jenkins_install_via != "docker"
+
 - name: Ensure correct ownership of JENKINS_HOME directory
   file:
     path: "{{ jenkins_home }}"
@@ -11,32 +42,88 @@
     mode: 0755
     state: directory
 
-- name: Configuration file is up to date (config.xml)
+- name: Ensure main configuration file is up to date
   template:
     src: "{{ jenkins_source_config_xml }}"
     dest: "{{ jenkins_home }}/config.xml"
-    mode: 0644
     owner: "{{ jenkins_config_owner }}"
     group: "{{ jenkins_config_group }}"
+    mode: 0644
 
 - name: Configure Jenkins location
   template:
     src: files/jenkins.model.JenkinsLocationConfiguration.xml.j2
     dest: "{{ jenkins_home }}/jenkins.model.JenkinsLocationConfiguration.xml"
-    mode: 0644
     owner: "{{ jenkins_config_owner }}"
     group: "{{ jenkins_config_group }}"
+    mode: 0644
 
-- name: secrets dir is up to date
+- name: Initialize Jenkins secrets dir fact
+  set_fact:
+    jenkins_secrets: "{{ jenkins_home }}/secrets"
+
+- name: Copy secrets
   copy:
     src: "{{ jenkins_source_secrets }}"
-    dest: "{{ jenkins_home }}/secrets"
+    dest: "{{ jenkins_secrets }}"
     owner: "{{ jenkins_config_owner }}"
     group: "{{ jenkins_config_group }}"
   when: jenkins_include_secrets
 
-- name: set permissions on secrets dir
+- name: Ensure correct ownership of secrets directory
   file:
-    path: "{{ jenkins_home }}/secrets"
+    path: "{{ jenkins_secrets }}"
+    owner: "{{ jenkins_config_owner }}"
+    group: "{{ jenkins_config_group }}"
     mode: 0700
-  when: jenkins_include_secrets
+    state: directory
+
+- name: Copy JKS keystore credentials
+  copy:
+    src: "{{ jenkins_https_keystore }}"
+    dest: "{{ jenkins_secrets }}/"
+  when: jenkins_https_keystore and jenkins_https_keystore_password
+
+- name: Copy CA signed certificate
+  copy:
+    src: "{{ jenkins_https_certificate }}"
+    dest: "{{ jenkins_secrets }}/"
+  when: jenkins_https_certificate and jenkins_https_private_key
+
+- name: Copy CA certificate private key
+  copy:
+    src: "{{ jenkins_https_private_key }}"
+    dest: "{{ jenkins_secrets }}/"
+  when: jenkins_https_certificate and jenkins_https_private_key
+
+- name: Initialize HTTPS credentials fact
+  set_fact:
+    jenkins_https_creds: ""
+
+- name: Set JKS keystore credentials
+  set_fact:
+    jenkins_https_creds: >-
+      --httpsKeyStore='{{ jenkins_secrets }}/{{ jenkins_https_keystore | basename }}'
+      --httpsKeyStorePassword='{{ jenkins_https_keystore_password }}'
+  when: jenkins_https_keystore and jenkins_https_keystore_password
+
+# This fact prevents the next task from going over >90 chars
+- name: Set fact for HTTPS certificate file
+  set_fact:
+    jenkins_https_certificate_file: >-
+      {{ jenkins_secrets }}/{{ jenkins_https_certificate | basename }}
+  when: jenkins_https_certificate and jenkins_https_private_key
+
+- name: Set CA signed certificate credentials
+  set_fact:
+    jenkins_https_creds: >-
+      --httpsCertificate='{{ jenkins_https_certificate_file }}'
+      --httpsPrivateKey='{{ jenkins_secrets }}/{{ jenkins_https_private_key | basename }}'
+  when: jenkins_https_certificate and jenkins_https_private_key
+
+- name: Set Jenkins command line options
+  lineinfile:
+    dest: /etc/default/jenkins
+    regexp: '^JENKINS_ARGS='
+    line: "JENKINS_ARGS=\"--webroot=/var/cache/$NAME/war --httpPort=$HTTP_PORT \
+      --httpsPort=$HTTPS_PORT {{ jenkins_https_creds }}\""
