--- a/tasks/yum/install.yml
+++ b/tasks/yum/install.yml
@@ -27,14 +27,14 @@
 
 - name: "Add Jenkins repository"
   get_url:
-    url: "http://pkg.jenkins-ci.org/redhat/jenkins.repo"
+    url: "https://pkg.jenkins.io/redhat-stable/jenkins.repo"
     dest: "/etc/yum.repos.d/jenkins.repo"
 
 - name: "Import Jenkins key"
-  command: "rpm --import https://jenkins-ci.org/redhat/jenkins-ci.org.key"  # noqa 303
+  command: "rpm --import https://pkg.jenkins.io/redhat-stable/jenkins.io.key"
   changed_when: false
 
 - name: "Install Jenkins"
   yum:
-    name: jenkins
+    name: jenkins-{{ jenkins_version }}
     state: present
