Fix jenkins_after_config_jobs_file config param
jenkins_after_config_jobs_file should either be empty or be the path to a file.
Currently, it is either the boolean value "false" or a string representing the file, which makes it impossible to do both "include" and "when" on it.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -37,7 +37,7 @@
 - include: "configure-jobs.yml"
 
 - include: "{{ jenkins_after_config_jobs_file }}"
-  when: jenkins_after_config_jobs_file
+  when: jenkins_after_config_jobs_file | length > 0
 
 - include: "start.yml"
 
