--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,7 +24,7 @@ jenkins_source_dir_jobs: "{{ jenkins_source_dir_configs }}/jobs"
 
 # When defined, include this task file after configuring jobs. This happens
 # at the very end of the role, but before Jenkins is taken out of quiet mode.
-jenkins_after_config_jobs_file: false
+jenkins_after_config_jobs_file: ""
 
 # config.xml template source
 jenkins_source_config_xml: "{{ jenkins_source_dir_configs }}/config.xml"
